--- a/TODO
+++ b/TODO
@@ -6,3 +6,8 @@ fixtures
 7. order list va order detail page larini qilish
 
 
+
+
+Resources
+1. https://realpython.com/creating-modifying-pdf/#installing-reportlab
+2. https://www.geeksforgeeks.org/creating-pdf-documents-with-python/
