--- a/TODO
+++ b/TODO
@@ -11,3 +11,10 @@ fixtures
 Resources
 1. https://realpython.com/creating-modifying-pdf/#installing-reportlab
 2. https://www.geeksforgeeks.org/creating-pdf-documents-with-python/
+
+
+
+django allauth
+google app id secret - olish
+facebook app id secret - olish
+telegram
